spacing fixes- screen was overflowing on mobile version

--- a/src/components/project/styles/Project.module.css
+++ b/src/components/project/styles/Project.module.css
@@ -33,7 +33,6 @@
 .links {
     display: flex;
     padding-top: 1rem;
-    gap: 2rem;
     justify-content: space-around;
     z-index: 100;
 }
